# Weight-Manager

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
help/: entries.md  entry_form.md
src/: app.py
src/help/: entries.md
src/templates/: entries.html
static/: form.js  help.js  script.js  style.css  table.js
templates/: 404.html  500.html  admin.html  base.html  entries.html  entry_form.html
tests/: test_app.py
utils/: migrate.py
