[project]
name = "weight-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "markdown",
    "fpdf2"
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"